package Coffee;

public interface Coffee {
    void drinkCoffee();
}
