package Coffee;

public class CoffeeCappuccino implements Coffee{
    @Override
    public void drinkCoffee() {
        System.out.println("Your Cappuccino. Enjoy");
    }
}
