package Coffee;

public class CoffeeEspresso implements Coffee{

    @Override
    public void drinkCoffee() {
        System.out.println("Your Espresso. Enjoy");
    }
}
