package Coffee;

public class CoffeeLatte implements Coffee{
    @Override
    public void drinkCoffee() {
        System.out.println("Your Latte. Enjoy");
    }
}
