package View;

public class Display {

    public void display(){
        System.out.println("""
                Choose a drink:
                1 - Espresso;
                2 - Cappuccino;
                3 - Latte; 
                4 - Exit.       
                """);
    }

}
